K8S/command-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: malikshafique/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: command-clusterip-service
spec:
    selector:
        app: commandservice
    ports:
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 8080
    type: ClusterIP
