K8S/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
    replicas: 1
    selector:
        matchLabels:
        app: rabbitmq
    template:
        metadata:
        labels:
            app: rabbitmq
        spec:
        containers:
          - name: rabbitmq
            image: rabbitmq:3-management
            ports:
              - containerPort: 5672
                name: rabbitmq-msg-port
              - containerPort: 15672    
                name: rabbitmq-mgmt-port 
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-service
spec:
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: rabbitmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-nodeport-service
spec:
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: rabbitmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
  type: NodePort
